Functions migrated from vegtableDB
- connect_db()
- dbSendQuery()
- do_backup()
- read_sql()
- sql-class

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Imports:
     RPostgreSQL,
     tcltk
 Suggests:
+    taxlist,
+    vegtable
 Description:
     Basic functions to create, connect and handle databases in the context of
     work with taxlist and vegtable.
@@ -25,6 +27,11 @@ URL: https://github.com/kamapu/divDB
 BugReports: https://github.com/kamapu/divDB/issues
 RoxygenNote: 7.2.2
 Collate:
+    'sql-class.R'
     'imports.R'
+    'get_precision.R'
+    'do_backup.R'
+    'read_sql.R'
     'connect_db.R'
+    'dbSendQuery.R'
     'compare_df.R'
