--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,17 @@ export(read_sql)
 exportClasses(sql)
 exportMethods(compare_df)
 exportMethods(dbSendQuery)
+exportMethods(update_data)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbReadTable)
 importFrom(DBI,dbSendQuery)
+importFrom(DBI,dbWriteTable)
 importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
+importFrom(biblio,update_data)
 importFrom(methods,setMethod)
 importFrom(tcltk,tclVar)
 importFrom(tcltk,tclvalue)
