--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: divDB
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Encoding: UTF-8
 Title: Connecting and Managing taxlist/vegtable Databases
 Authors@R:
@@ -13,10 +13,10 @@ Imports:
     methods,
     RPostgres,
     RPostgreSQL,
+    taxlist,
     tcltk,
     tools
 Suggests:
-    taxlist,
     vegtable
 Description:
     Basic functions to create, connect and handle databases in the context of
@@ -26,8 +26,9 @@ Roxygen: list(markdown = TRUE)
 License: file LICENSE
 URL: https://github.com/kamapu/divDB
 BugReports: https://github.com/kamapu/divDB/issues
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 Collate:
+	'credentials.R'
     'sql-class.R'
     'comp_list-class.R'
     'imports.R'
