--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,comp_list)
 S3method(print,sql)
 export(add_columns)
 export(connect_db)
+export(credentials)
 export(do_backup)
 export(do_restore)
 export(get_precision)
@@ -26,6 +27,7 @@ importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
 importFrom(biblio,update_data)
 importFrom(methods,setMethod)
+importFrom(taxlist,sort_backups)
 importFrom(tcltk,tclVar)
 importFrom(tcltk,tclvalue)
 importFrom(tcltk,tkbind)
