--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,11 +22,13 @@ exportClasses(comp_list)
 exportClasses(sql)
 exportMethods(compare_df)
 exportMethods(dbSendQuery)
+exportMethods(insert_rows)
 exportMethods(update_data)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExistsTable)
+importFrom(DBI,dbGetQuery)
 importFrom(DBI,dbReadTable)
 importFrom(DBI,dbSendQuery)
 importFrom(DBI,dbWriteTable)
@@ -34,6 +36,7 @@ importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
 importFrom(biblio,update_data)
 importFrom(methods,setMethod)
+importFrom(taxlist,insert_rows)
 importFrom(taxlist,sort_backups)
 importFrom(tcltk,tclVar)
 importFrom(tcltk,tclvalue)
