New function 'update_rows()'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ exportMethods(compare_df)
 exportMethods(dbSendQuery)
 exportMethods(insert_rows)
 exportMethods(update_data)
+exportMethods(update_rows)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
