--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,13 +26,13 @@ exportMethods(insert_rows)
 exportMethods(update_data)
 exportMethods(update_rows)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
+importClassesFrom(biblio,comp_df)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExistsTable)
 importFrom(DBI,dbGetQuery)
 importFrom(DBI,dbReadTable)
 importFrom(DBI,dbSendQuery)
-importFrom(DBI,dbWriteTable)
 importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
 importFrom(biblio,update_data)
