New functions coercing character to sql.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(do_backup)
 export(do_character)
 export(do_restore)
 export(get_precision)
+export(new_sql)
 export(read_sql)
 export(write_sql)
 exportClasses(comp_list)
