errors in check.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,12 +26,13 @@ Roxygen: list(markdown = TRUE)
 License: file LICENSE
 URL: https://github.com/kamapu/divDB
 BugReports: https://github.com/kamapu/divDB/issues
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.2.9000
 Collate:
-	'credentials.R'
+	'imports.R'
+    'credentials.R'
     'sql-class.R'
+    'write_queries.R'
     'comp_list-class.R'
-    'imports.R'
     'get_precision.R'
     'do_backup.R'
     'read_sql.R'
