insert_rows() tested.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(do_backup)
 export(do_character)
 export(do_restore)
 export(get_precision)
+export(insert_rows_sql)
 export(new_sql)
 export(read_sql)
 export(write_sql)
