Function update_rows() checked.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(get_precision)
 export(insert_rows_sql)
 export(new_sql)
 export(read_sql)
+export(update_rows_sql)
 export(write_sql)
 exportClasses(comp_list)
 exportClasses(sql)
