All functions working with plain sql generators.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(add_columns)
 export(add_columns_sql)
 export(connect_db)
 export(credentials)
+export(delete_rows_sql)
 export(disconnect_db)
 export(do_backup)
 export(do_character)
