--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,14 +12,19 @@ S3method(do_character,numeric)
 S3method(print,comp_list)
 S3method(print,sql)
 export(add_columns)
+export(add_columns_sql)
 export(connect_db)
 export(credentials)
+export(delete_rows_sql)
 export(disconnect_db)
 export(do_backup)
 export(do_character)
 export(do_restore)
 export(get_precision)
+export(insert_rows_sql)
+export(new_sql)
 export(read_sql)
+export(update_rows_sql)
 export(write_sql)
 exportClasses(comp_list)
 exportClasses(sql)
@@ -40,6 +45,7 @@ importFrom(DBI,dbSendQuery)
 importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
 importFrom(biblio,update_data)
+importFrom(methods,as)
 importFrom(methods,setMethod)
 importFrom(taxlist,insert_rows)
 importFrom(taxlist,sort_backups)
