Bug fixes at write_sql() and read_sql()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(do_character,logical)
 S3method(do_character,numeric)
 S3method(print,comp_list)
 S3method(print,sql)
+S3method(write_sql,sql)
 export(add_columns)
 export(add_columns_sql)
 export(connect_db)
