Bugs fixed in print.sql() and write_sql().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,3 +64,4 @@ importFrom(tcltk,tktoplevel)
 importFrom(tcltk,tkwait.window)
 importFrom(tcltk,tkwm.title)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,capture.output)
