--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(do_character,logical)
 S3method(do_character,numeric)
 S3method(print,comp_list)
 S3method(print,sql)
+S3method(write_sql,sql)
 export(add_columns)
 export(add_columns_sql)
 export(connect_db)
@@ -63,3 +64,4 @@ importFrom(tcltk,tktoplevel)
 importFrom(tcltk,tkwait.window)
 importFrom(tcltk,tkwm.title)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,capture.output)
