connect_db() adapted to new way of setting credentials.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(add_columns)
 export(add_columns_sql)
 export(connect_db)
 export(credentials)
+export(delete_credentials)
 export(delete_rows_sql)
 export(disconnect_db)
 export(do_backup)
@@ -46,6 +47,8 @@ importFrom(DBI,dbSendQuery)
 importFrom(RPostgres,Postgres)
 importFrom(biblio,compare_df)
 importFrom(biblio,update_data)
+importFrom(keyring,key_delete)
+importFrom(keyring,key_list)
 importFrom(methods,as)
 importFrom(methods,setMethod)
 importFrom(taxlist,insert_rows)
