New method for 'do_character()' applied to time classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(c,sql)
 S3method(disconnect_db,PostgreSQLConnection)
 S3method(disconnect_db,PqConnection)
 S3method(do_character,Date)
+S3method(do_character,POSIXct)
+S3method(do_character,POSIXlt)
 S3method(do_character,character)
 S3method(do_character,data.frame)
 S3method(do_character,factor)
